--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
 
     <string moduleConfig="true" name="reactNativeCodePush_androidDeploymentKey">tcclDfvHIxd6RoFWoc-H-rnppT_FV1NPlr4VW</string>
-    <string name="app_name">CharityTinder</string>
+    <string name="app_name">Impart</string>
 </resources>
